package Game;

import Rules.GameRules;

public class TrianteEnaGame extends Game{
    @Override
    public String getType() {
        return super.getType();
    }

    @Override
    public void setType(String type) {
        super.setType(type);
    }

    @Override
    public int getMaximumNumberOfPlayers() {
        return super.getMaximumNumberOfPlayers();
    }

    @Override
    public void setMaximumNumberOfPlayers(int maximumNumberOfPlayers) {
        super.setMaximumNumberOfPlayers(maximumNumberOfPlayers);
    }

    @Override
    public GameRules getRules() {
        return super.getRules();
    }

    @Override
    public void setRules(GameRules rules) {
        super.setRules(rules);
    }
}
